# video-editor

./: .gitignore  README.md  pyproject.toml  requirements.txt
video_editor/: __main__.py
video_editor/actions/: __init__.py  action.py  check_extension_action.py  clip_data.py  cut_action.py  open_action.py  save_action.py
video_editor/actions/factories/: __init__.py  action_factory.py  default_action_factory.py
video_editor/console/: __init__.py
video_editor/exceptions/: __init__.py  action_already_bound.py  action_not_found.py
