[tool.poetry]
name = "moviepy"
version = "0.1.0"
description = ""
authors = ["Danila <crowo4ka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
progress = "^1.6"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
